# GEE-Wildfire-Data

./: .gitignore  CONTEXT.md  MANIFEST.in  README.md  TODO.txt  config_options.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
docs/: Datasets.md  TODO.md  pipeline_design.md
src/: config_options.yml  confignb.ipynb  configuration.py  convert_tiff_to_hdf5.py  create_config.py  create_fire_config.py  create_globfire_config.py  create_mtbs_config.py  datacheck.py  drive_downloader.py  get_globfire.py  globfire_nb.ipynb  main.py  perimnb.ipynb  scratch.ipynb
src/DataPreparation/: DatasetPrepareService.py  DatasetPrepareService2.py  ids.txt
src/DataPreparation/satellites/: FirePred.py  FirePredOld.py
src/EE_Wildfire.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/config/: us_fire_2015_1e7.yml  us_fire_2016_1e7.yml  us_fire_2017_1e7.yml  us_fire_2018_1e7_test.yml  us_fire_2019_1e7.yml  us_fire_2019_1e7_test.yml  us_fire_2020_1e7.yml  us_fire_2020_1e7_test.yml  us_fire_2022_1e7.yml  us_fire_2023_1e7.yml
src/ee_wildfire/: UserInterface.py  command_line_args.py  config_options.yml  constants.py  create_fire_config.py  drive_downloader.py  export_queue.py  get_globfire.py  globfire.py  main.py  pipeline.py  user_config.yml
src/ee_wildfire/DataPreparation/: DatasetPrepareService.py
src/ee_wildfire/DataPreparation/satellites/: FirePred.py
src/ee_wildfire/EE_Wildfire.egg-info/: PKG-INFO  SOURCES.txt
src/ee_wildfire/ExportQueue/: ExportMonitor.py  QueueManager.py
src/ee_wildfire/UserConfig/: UserConfig.py  authentication.py
src/ee_wildfire/UserInterface/: UserInterface.py  map_maker.py
src/ee_wildfire/UserInterface/static/js/: draw_handler.js
src/ee_wildfire/config/: us_fire_2021_1e7.yml
src/ee_wildfire/datasets/: __init__.py  custom.py  earthaccess.py  earthengine.py  index.py  registry.py
src/ee_wildfire/io/: auth.py
src/ee_wildfire/utils/: command_line_arg_utils.py  geojson_utils.py  google_drive_util.py  user_config_utils.py  yaml_utils.py
src/raster_builder/: config.py  context.py  main.py
src/raster_builder/datasets/: __init__.py  index.py
src/raster_builder/io/: storage.py
test/: create_fire_config.py  demo_generate_fire_table.py  demo_google_drive_utils.py  demo_ui.py  get_globfire.py  test_authentication.py  test_command_line_args.py  test_config.py  test_console_ui.py  test_fire_config.py  test_google_drive_utils.py  test_user_config.py  ui_test.py  user_config_test.py  utils.py
