[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EE-Wildfire"
version = "2025.0.1"
description = "Pulls data from Google Earth Engine, syncs it to Google Drive, and downloads files."
authors = [
    { name = "Your Name", email = "your.email@example.com" },
    { name = "Kyle Krstulich", email = "kylekrstulich@gmail.com" },
]

maintainers = [
    { name = "Kyle Krstulich", email = "kylekrstulich@gmail.com" },
]

readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
	"earthengine-api",
	"tqdm",
	# "yaml",
	"pandas",
	"raster_tools",
	"geopandas",
	"shapely",
	"numpy",
	"geemap",
	"tdqm",
	"google-api-python-client",
	"google-auth-httplib2",
	"google-auth-oauthlib",
	"setuptools",
	"wheel",
]

[project.urls]
Homepage = "https://github.com/KylesCorner/Earth-Engine-Wildfire-Data/tree/master"
Issues = "https://github.com/KylesCorner/Earth-Engine-Wildfire-Data/issues"

[project.scripts]
ee-wildfire = "main:main"
