[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
raster_builder = []

[project]
name = "raster-builder"
# version is just the date that package is publish to PyPi: YYYY.MM.DD
version = "2025.06.14"
description = "Configuration-first pipeline for assembling wildfire raster datasets."
authors = [
    { name = "Lorn Jaeger", email = "lornjaeger@proton.me" }
]

maintainers = [
    { name = "Lorn Jaeger", email = "lornjaeger@proton.me" }
]

readme = "README.md"

license = { file = "LICENSE" }

requires-python = ">=3.10"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python"
]

keywords = ["wildfire", "earth engine", "raster"]

dependencies = [
	"earthengine-api",
	"geopandas",
	"numpy",
	"pandas",
	"PyYAML",
	"shapely",
]


[project.urls]
Homepage = "https://github.com/lorn-jaeger/raster-builder"
Issues = "https://github.com/lorn-jaeger/raster-builder/issues"

[project.scripts]
raster-builder = "raster_builder.main:main"
